======================================================================================================================

26 Apr 2022
Version 5.4.0
======================================================================================================================
AllOverIt.Aws.Cdk.AppSync
  * Updated SchemaScalarAttribute to support namespace-based name creation
  * Added support to SchemaEnumAttribute to support namespace-based name creation


26 Apr 2022
Version 5.3.1
======================================================================================================================
AllOverIt.Aws.Cdk.AppSync
  * Correction to removing namespaces from custom schema types.


24 Apr 2022
Version 5.3.0
======================================================================================================================
AllOverIt.Validation
  * Added support to auto-discover and register validators with a ValidationInvoker, via an IValidationRegistry
    extension method and registrar classes inheriting ValidationRegistrarBase.


24 Apr 2022
Version 5.2.0
======================================================================================================================
AllOverIt.Serialization.NewtonsoftJson
AllOverIt.Serialization.SystemTextJson
  * Improvements to JsonHelper and NestedDictionaryConverter to allow for strict / lower-camel case property naming

AllOverIt.Aws.Cdk.AppSync
  * Support automatic naming of GQL schema types and inputs

AllOverIt.DependencyInjection
  * Implementation candidates in the registrar are now cached

AllOverIt.Validation
  * Added support to register validators based on their runtime type.


23 Apr 2022
Version 5.1.0
======================================================================================================================
AllOverIt
  * Added static Create() factory method to EnrichedEnumTypeConverter
  * Added IsSubClassOfRawGeneric() and improved IsDerivedFrom() to consider open/unbound generics
